deployment-files/hello-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-oauth-headers@kubernetescrd,default-oauth-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: hello-kubernetes-01.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  hello-kubernetes-hello-kubernetes
                port:
                  number: 80
